# rag-visual-lab

./: LICENSE  README.md  __init__.py  app.py  augmentation.py  chunks.py  generation.py  main.py  main_busca.py  read_files.py  retriever.py  semantic_encoder.py
RAG_visual_lab/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_crewai.py  test_retriever.py
RAG_visual_lab/pages/: 00_🏠_Home.py  01_🔰_RAG_Clássico.py  02_💬_RAG_com_Memória.py  03_🤖_RAG_Agentic.py
RAG_visual_lab/services/: agentic_rag_provider.py  augmentation_provider.py  datasets_provider.py  gemini_provider.py  llm_provider.py  memory_provider.py  retriever_provider.py
RAG_visual_lab/tests/: __init__.py
RAG_visual_lab/tests/component/: __init__.py  test_01_rag_classico.py  test_02_rag_memoria.py  test_03_rag_agentic.py
RAG_visual_lab/tests/unit/: __init__.py  test_agentic_rag_provider.py  test_augmentation_provider.py  test_gemini_provider.py  test_memory_provider.py  test_retriever_provider.py  test_text_processing.py
RAG_visual_lab/utils/: text_processing.py  ui_components.py
chunks_lab/: chunks_streamlit_app.py  run_chunks_demo.py
docs/direito_constitucional/: __adicioneaqui__.txt
docs/synthetic_dataset_papers/: __adicioneaqui__.txt
